Add support for --sun-misc-unsafe-memory-access=
(cherry picked from commit b077c8395cf77b9a1fb8358623c6b701cc0510f6)